media not updating

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="flex">
         <div class="banner flex">
-      <img src="./images/ReMaxLogo.png" alt="Re Max Inland Empire">
+      <img src="./images/remax_logo.png" alt="Re Max Inland Empire">
       <nav>
         <a href="#">Home</a>
         <a href="#">Contact Me</a>
@@ -25,7 +25,7 @@
       <h1>Shari Tilton</h1>
     </header>
     <!--------------------------done----------------->
-    <div class="sub_heading"><h2>Serving Spokane, Washington and surrounding areas</h2></div>
+    <div class="sub_heading"><h2>Serving Spokane, Washington and surrounding areas </h2></div>
    
     
     <!--aside-->
@@ -43,7 +43,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mollis nunc sed id semper. Faucibus turpis in eu mi bibendum neque egestas congue quisque. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. </p>
     </div>
     </aside>
-    <!--main-->
+    <!--MAIN-->
     <main class="flex">
     
     <div class="about flex">
@@ -51,7 +51,7 @@
         <img src="./images/Shari_hs.jpg" alt="Shari Tilton">
         <div class="main_title flex">
             <h2>Shari Tilton</h2>
-            <img src="./images/ReMaxLogo.png" alt="ReMax Inland Northwest">
+            <img src="./images/remax_logo.png" alt="ReMax Inland Northwest">
         </div>
         </div>
     <h4>NOW more than ever…………….</h4>
@@ -71,12 +71,12 @@
         <p>We invite you to click on the “Contact Me” button on this web site, and join the growing number of Sheri Tilton’s satisfied clients.</p>
         </div>
     </main>
-    <!--spokane living-->
-    <div class="container1 flex">
+    <!--LOCAL-->
+    <div class="local flex">
         <div class="item1"><h1>Spokane Living</h1>
             <img src="./images/spokane_living_600.jpg" alt="Spokane, washington at sunset"></div>
         <div class="item2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fusce id velit ut tortor pretium viverra suspendisse potenti. Ipsum dolor sit amet consectetur adipiscing elit ut aliquam purus. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut consequat. Eu non diam phasellus vestibulum lorem sed. Convallis posuere morbi leo urna molestie at elementum. Massa id neque aliquam vestibulum morbi blandit. Duis at consectetur lorem donec massa sapien. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Id aliquet risus feugiat in ante. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum fusce. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. A erat nam at lectus urna duis convallis convallis. Orci sagittis eu volutpat odio. Sit amet purus gravida quis blandit turpis cursus. Vitae et leo duis ut diam quam. Sit amet consectetur adipiscing elit duis. Dolor sit amet consectetur adipiscing. Magna fringilla urna porttitor rhoncus dolor purus non. Malesuada fames ac turpis egestas integer.
+            <p>This is a section about how cool Spokane is to live in. Fusce id velit ut tortor pretium viverra suspendisse potenti. Ipsum dolor sit amet consectetur adipiscing elit ut aliquam purus. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut consequat. Eu non diam phasellus vestibulum lorem sed. Convallis posuere morbi leo urna molestie at elementum. Massa id neque aliquam vestibulum morbi blandit. Duis at consectetur lorem donec massa sapien. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Id aliquet risus feugiat in ante. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum fusce. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. A erat nam at lectus urna duis convallis convallis. Orci sagittis eu volutpat odio. Sit amet purus gravida quis blandit turpis cursus. Vitae et leo duis ut diam quam. Sit amet consectetur adipiscing elit duis. Dolor sit amet consectetur adipiscing. Magna fringilla urna porttitor rhoncus dolor purus non. Malesuada fames ac turpis egestas integer.
 
                 </p>
         </div>
@@ -95,7 +95,7 @@
       <a href="#">Links</a>
       </div>
       <div class="logo">
-        <a href="#"><img src="./images/ReMaxLogo.png" alt="ReMax logo"></a>
+        <a href="#"><img src="./images/remax_logo.png" alt="ReMax logo"></a>
     </div>
       <div class="social-media">
         <h4>Connect with me on Social  Media</h4>
