final - turn in

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
       <h1>Shari Tilton</h1>
     </header>
     <!--------------------------done----------------->
-    <div class="sub_heading"><h2>Serving Spokane, Washington and surrounding areas </h2></div>
+    <div class="sub_heading flex"><h3>Serving Spokane, Washington and surrounding areas </h3></div>
    
     
     <!--aside-->
     <aside class="flex"><h2>New Listings</h2>
+      <div class="listings flex">
     <div class="house flex">
         <img src="./images/house1.jpg" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mollis nunc sed id semper. Faucibus turpis in eu mi bibendum neque egestas congue quisque. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. </p>
@@ -41,6 +42,7 @@
     <div class="house flex">
         <img src="./images/house3.jpg" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mollis nunc sed id semper. Faucibus turpis in eu mi bibendum neque egestas congue quisque. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. </p>
+        </div>
     </div>
     </aside>
     <!--MAIN-->
@@ -73,7 +75,7 @@
     </main>
     <!--LOCAL-->
     <div class="local flex">
-        <div class="item1"><h1>Spokane Living</h1>
+        <div class="item1 flex"><h1>Spokane Living</h1>
             <img src="./images/spokane_living_600.jpg" alt="Spokane, washington at sunset"></div>
         <div class="item2">
             <p>This is a section about how cool Spokane is to live in. Fusce id velit ut tortor pretium viverra suspendisse potenti. Ipsum dolor sit amet consectetur adipiscing elit ut aliquam purus. Aliquet porttitor lacus luctus accumsan tortor posuere ac ut consequat. Eu non diam phasellus vestibulum lorem sed. Convallis posuere morbi leo urna molestie at elementum. Massa id neque aliquam vestibulum morbi blandit. Duis at consectetur lorem donec massa sapien. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Id aliquet risus feugiat in ante. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum fusce. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. A erat nam at lectus urna duis convallis convallis. Orci sagittis eu volutpat odio. Sit amet purus gravida quis blandit turpis cursus. Vitae et leo duis ut diam quam. Sit amet consectetur adipiscing elit duis. Dolor sit amet consectetur adipiscing. Magna fringilla urna porttitor rhoncus dolor purus non. Malesuada fames ac turpis egestas integer.
@@ -97,7 +99,7 @@
       <div class="logo">
         <a href="#"><img src="./images/remax_logo.png" alt="ReMax logo"></a>
     </div>
-      <div class="social-media">
+      <div class="social-media flex">
         <h4>Connect with me on Social  Media</h4>
         <div class="sm-links">
             <a href="#" class="social-icon"><img
